--- a/backend/core/templates/presentations/black_and_white_clean/slide_02.html
+++ b/backend/core/templates/presentations/black_and_white_clean/slide_02.html
@@ -86,13 +86,13 @@
   
   <div class="logos-container">
     <div class="logo-item">
-      <img src="../../uploads/Chrome-Logo-Mockup 4.png" alt="Chrome Logo">
+      <img src="uploads/Chrome-Logo-Mockup 4.png" alt="Chrome Logo">
     </div>
     <div class="logo-item">
-      <img src="../../uploads/Chrome-Logo-Mockup 4.png" alt="Chrome Logo">
+      <img src="uploads/Chrome-Logo-Mockup 4.png" alt="Chrome Logo">
     </div>
     <div class="logo-item">
-      <img src="../../uploads/Chrome-Logo-Mockup 4.png" alt="Chrome Logo">
+      <img src="uploads/Chrome-Logo-Mockup 4.png" alt="Chrome Logo">
     </div>
   </div>
   
